--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   shared_preferences: ^2.1.0
   easy_localization: ^3.0.1
   localstorage: ^4.0.0+1
-
+  json_annotation: ^4.9.0
+  retrofit: ^4.0.1
+  flutter_bloc: ^9.0.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +55,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.6
+  retrofit_generator: ^8.0.4
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
